# aep

./: .gitignore  README.md
aep-sdk/: .dockerignore  Dockerfile.api  README.md  current.md  docker-compose.yml  history-of-poc.md  plan.md  prod.md  progress.md  pyproject.toml  quick_read_aep.py
aep-sdk/.github/workflows/: ci.yml
aep-sdk/aep/: __init__.py  callback.py  cli.py  ledger.py
aep-sdk/aep/tests/: test_callback.py  test_cli.py  test_ledger.py
aep-sdk/analysis/: convert_notebook.py  environment.yml  eval.ipynb  eval.md  eval.py  eval_notebook_content.md  run_aep_eval.py  run_eval.py
aep-sdk/backend/: main.py  rag_chain.py
aep-sdk/data/aep_runs/: aep_eval_trace_aep_eval_20250522-122451_b56cf963.aep.current  aep_eval_trace_aep_eval_20250522-123108_d1f4ae57.aep.current  aep_eval_trace_aep_eval_20250522-123416_5aee3ee8.aep.current  aep_eval_trace_aep_eval_20250522-124110_59af2ac4.aep.current  aep_eval_trace_aep_eval_20250522-124802_0abb5630.aep.current  aep_eval_trace_aep_eval_20250522-125240_f3e28e0c.aep.current  aep_eval_trace_aep_eval_20250522-125800_2dc10fab.aep.current  aep_eval_trace_aep_eval_20250522-130405_72058419.aep.current  aep_eval_trace_aep_eval_20250522-130916_b95a2b34.aep.current  aep_eval_trace_aep_eval_20250522-142503_c897997f.aep.current  aep_eval_trace_aep_eval_20250522-145826_e9946ba4.aep.current  aep_eval_trace_aep_eval_20250522-202234_70215fc5.aep.current  (+9 more)
aep-sdk/qa/: qa.yaml  qa_curated.yaml
aep-sdk/scripts/: build_qa.py
aep-sdk/ui/: Dockerfile  package-lock.json  package.json
aep-sdk/ui/src/: App.css  App.tsx  index.tsx
(+40 files in other folders)
